test/corpus/BasicInst.test
==========
Basic Instructions
==========
lda #$10
sta $2000
inx
---
(source_file
    (instruction
        (mnemonic)
        (operand (immediate (one_byte_number))))
    (instruction
        (mnemonic)
        (operand (absolute (two_byte_number))))
    (instruction
        (mnemonic)))

==========
Basic Instructions 2
==========
lda #$10
---
(source_file
    (instruction
        (mnemonic)
        (operand (immediate (one_byte_number)))))
