test/corpus/DiffAddrModes.test
==========
Different Addressing Modes
==========
lda #$10
lda $2000
lda $2000,x
lda $2000,y
lda $10
lda $10,x
lda $10,y
lda ($10)
lda ($10,x)
lda ($10),y
---
(source_file
    (instruction
        (mnemonic)
        (operand (immediate (one_byte_number))))
    (instruction
        (mnemonic)
        (operand (absolute (two_byte_number))))
    (instruction
        (mnemonic)
        (operand (absolute_x (two_byte_number))))
    (instruction
        (mnemonic)
        (operand (absolute_y (two_byte_number))))
    (instruction
        (mnemonic)
        (operand (zero_page (one_byte_number))))
    (instruction
        (mnemonic)
        (operand (zero_page_x (one_byte_number))))
    (instruction
        (mnemonic)
        (operand (zero_page_y (one_byte_number))))
    (instruction
        (mnemonic)
        (operand (indirect_zeropage (one_byte_number))))
    (instruction
        (mnemonic)
        (operand (indirect_zeropage_x (one_byte_number))))
    (instruction
        (mnemonic)
        (operand (indirect_zeropage_y (one_byte_number)))))
