test/corpus/HexAndDecNumbers.test
==========
Hexadecimal and Decimal Numbers
==========
lda #$0F       // Hexadecimal immediate
sta $1234      // Hexadecimal absolute
lda #255       // Decimal immediate
sta $5678      // Decimal absolute
---
(source_file
    (instruction
        (mnemonic)
        (operand (immediate (number))))
    (line_comment)
    (instruction
        (mnemonic)
        (operand (absolute (number))))
    (line_comment)
    (instruction
        (mnemonic)
        (operand (immediate (number))))
    (line_comment)
    (instruction
        (mnemonic)
        (operand (absolute (number))))
    (line_comment))
