test/corpus/RelBranching.test
==========
Relative Branching
==========
start:
    lda #$01
    beq end
    inx
    bne start
end:
    rts
---
(source_file
    (label (identifier))
    (instruction
        (mnemonic)
        (operand (immediate (one_byte_number))))
    (instruction
        (mnemonic)
        (operand (relative (identifier))))
    (instruction
        (mnemonic))
    (instruction
        (mnemonic)
        (operand (relative (identifier))))
    (label (identifier))
    (instruction
        (mnemonic)))
